Add page breaks for top level headers in PDF.

--- a/text/common/metadata.yml
+++ b/text/common/metadata.yml
@@ -5,4 +5,6 @@ header-includes: |
     \lhead[\leftmark]{\leftmark}
     \chead[]{}
     \rhead[v0.0.20200708]{v0.0.20200708}
+    \usepackage{titlesec}
+    \newcommand{\sectionbreak}{\clearpage}
 ---
