Add metadata for web page.
Add tags specified for the [minimal theme](https://github.com/pages-themes/minimal).

--- a/beyond.yml
+++ b/beyond.yml
@@ -1,4 +1,7 @@
 ---
 title: "Beyond"
-subtitle: "A Fantasy Adventure Game By Sage LaTorra"
+subtitle: "A Fantasy Adventure Game"
+description: "A Fantasy Adventure Game"
+author: "Sage LaTorra"
+show_downloads: "true"
 ---
