Move site config values to proper location.

--- a/beyond.yml
+++ b/beyond.yml
@@ -1,7 +1,5 @@
 ---
-title: "Beyond"
-subtitle: "A Fantasy Adventure Game"
-description: "A Fantasy Adventure Game"
-author: "Sage LaTorra"
-show_downloads: "true"
+title: Beyond
+subtitle: A Fantasy Adventure Game
+author: Sage LaTorra
 ---
